kubernetes/fullstack-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fullstack-deployment
  namespace: my-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fullstack
  template:
    metadata:
      labels:
        app: fullstack
    spec:
      containers:
        - name: backend
          image: pangasathish/my-backend:latest
          ports:
            - containerPort: 5000
        - name: frontend
          image: pangasathish/my-frontend:latest
          ports:
            - containerPort: 3000
