kubernetes/fullstack-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fullstack-service
  namespace: my-namespace
spec:
  type: NodePort
  selector:
    app: fullstack
  ports:
    - name: frontend
      port: 3000
      targetPort: 3000
      nodePort: 30300
    - name: backend
      port: 5000
      targetPort: 5000
      nodePort: 30500
